src/App.css
/* .container {
  padding: 140px;
} */

@media screen and (min-width: 1201px) {
  .container {
    padding: 140px;
  }
}

@media screen and (max-width: 1200px) {
  .container {
    padding: 60px;
  }
}

.ball {
  margin: auto;
  background-color: black;
  color: white;
  text-align: center;
  font-family: monospace;
  border-radius: 50%;
  width: 200px;
  height: 200px;
  padding: 20%;

  box-shadow: 0 80px 10px rgba(0,0,0,0.4), 0 30px 50px rgba(0,0,0,0.25);
}

.input {
  height: 40px;
  width: 200px;
  font-size: 20px;
  font-family: sans-serif;
  text-align: center;
  color: white;
  margin: 0 auto;
  background-color: black;
}

@media screen and (min-width: 1201px) {
  .answer {
    font-size: 40px;
  }
}

@media screen and (max-width: 1200px) {
  .answer {
    font-size: 24px;
  }
}

.shakeAnim {
  animation: shake 0.9s cubic-bezier(.36,.07,.19,.97) both;
  transform: translate3d(0, 0, 0);
  backface-visibility: hidden;
  perspective: 1000px;
}

@keyframes shake {
  10%, 90% {
    transform: translate3d(-10px, 0, 0);
  }

  20%, 80% {
    transform: translate3d(10px, 0, 0);
  }

  30%, 50%, 70% {
    transform: translate3d(-10px, 0, 0);
  }

  40%, 60% {
    transform: translate3d(10px, 0, 0);
  }
}

.fadeIn {
  opacity: 0;
  animation: fadeIn 2s forwards;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
    transform: translateY(-50px);
  }
  30% {
    opacity: 0;
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

